Subtotals are now correctly rounded to two decimal places Reconnected Cart Item Component that had been erroneously discounted in a previous commit during a test Updated styles for the Quantity Component to make it more visibly appealing Updated styles for the Cart Item Component to match the updates to the Quantity Component

--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -58,11 +58,13 @@
     height: 5px;
     border: 0;
     box-shadow: inset 0 5px 5px -5px rgba(0, 0, 0, 0.5);
+    margin-top: 0px;
+    margin-bottom: 10px;
   }
 }
 
 .scrollable-cart {
-  max-height: 400px;
+  max-height: 405px;
   overflow-x: hidden;
   overflow-y: auto;
   padding-right: 15px;
@@ -124,21 +126,27 @@
 
     .item-name {
       width: 85%;
+      margin-bottom: 15px;
       font-weight: bold;
-      font-size: 1.17em;
+      font-size: 1.5em;
     }
 
     .item-remove {
       width: 15%;
-      font-size: 1.17em;
+      vertical-align: middle;
+      font-size: 1.9em;
+      margin-top: -10px;
+      color: #d9534f;
     }
 
     .item-quantity {
       width: 60%;
+      vertical-align: top;
     }
 
     .item-price {
       width: 40%;
+      font-size: 22px;
     }
   }
 }
@@ -147,17 +155,23 @@
   width: 100%;
 
   button {
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
+    line-height: 27px;
     text-align: center;
+    border-radius: 5px;
   }
 
   input {
-    width: 35px;
-    height: 19px;
+    width: 50px;
+    height: 30px;
     margin-left: 7.5px;
     margin-right: 7.5px;
     text-align: center;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 20px;
+    vertical-align: top;
   }
 }
 
