--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,8 +44,8 @@ body {
   height: 35px;
 }
 
-.spacer15 {
-  height: 15px;
+.spacer10 {
+  height: 1px;
   width: 100%;
 }
 
